--- a/.github/workflows/build-sfdx.yml
+++ b/.github/workflows/build-sfdx.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2    
       - name: Write the token into a file
-      - run: 'echo ${{ secrets.DEVHUB_TOKEN}} > token.txt'
+        run: 'echo ${{ secrets.DEVHUB_TOKEN}} > token.txt'
       - name: Run script
-      - run: ${GITHUB_WORKSPACE}/.github/sfdx-build.sh          
+        run: ${GITHUB_WORKSPACE}/.github/sfdx-build.sh          
 #       - name: Write the token into a file
 #         run: 'echo ${{ secrets.DEVHUB_TOKEN}} > token.txt'
 #       - name: Install Salesforce CLI
