--- a/.github/workflows/build-sfdx.yml
+++ b/.github/workflows/build-sfdx.yml
@@ -1,6 +1,10 @@
 name: 'sfdx'
 
-on: [push]
+on:    
+ pull_request:
+        types: [opened]
+        branches:
+            - master
 
 jobs:
   build:
