tag added to yml

--- a/.github/workflows/manualWF.yml
+++ b/.github/workflows/manualWF.yml
@@ -1,6 +1,8 @@
 name: Manually triggered workflow
 on:
   workflow_dispatch:
+    tags:
+    - '*productionDebug*'
     inputs:
       name:
         description: 'Person to greet'
